# VAI_Technologies_test_task

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
VAI_Technologies_test_task/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  models.py  tests.py  views.py
products/migrations/: 0001_initial.py
